2001-07-11  Hans Petter Jansson  <hpj@ximian.com>

	This implements an exact internal representation of XML, which can
	be scanned to and printed out from.

	* xml.pl.in (xst_xml_model_print_attributes): Implement.
	  (xst_xml_model_print_recurse): Implement.
	  (xst_xml_model_print): Implement.
	  (xst_xml_scan_make_kid_array): Accept more characters in attributes.
	  (xst_xml_model_scan_recurse): Implement.
	  (xst_xml_model_scan): Implement in full.

	* parse.pl.in (xst_parse_xml): Use xst_xml_model_scan().

2001-07-11  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_get_replace_table): Typos.
	(xst_network_route_set_default_gw): The gatewaydev also
	counts to check if the default route should change.

2001-07-11  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in (x_version): Beginnings of X version detection.
	(parse_modeline): Finished to support "ModeLine" entries.
	(x_xml_print_modelines): Implement.
	(x_parse_section): Fixed options parsing bug.

2001-07-10  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_get_replace_table): Oops:
	support gatewaydev for replacing too.
	(xst_network_route_set_default_gw): Run route to set
	default gw as required.

	* network-conf.in (xml_print): Print the gwdevunsup
	tag as well.

	* network.pl.in (xst_network_get_parse_table): Added
	gwdevunsup for those platforms that don't support this.

2001-07-10  Hans Petter Jansson  <hpj@ximian.com>

	* xml.pl.in (xst_xml_get_attribute): Implement.

	* parse.pl.in (xst_parse_xml): Implement in full.

2001-07-09  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network-conf.in (xml_print): gatewaydev support.
	(xml_parse_network): same.

	* network.pl.in (xst_network_get_parse_table): new gatewaydev
	feature required to avoid ambiguous situations. RedHat-only
	for the moment. SuSE doesn't need it (well, doesn't use it).
	(xst_network_get_replace_table): same.
	TODO: investigate what to do for Debian.
